--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a class="uppercase nav_link item" href="#contact">Contact</a>
                 </div>
 			</nav>
-			<article class="container center align-center">
+			<div class="container center align-center">
 				<img
                     class="item"
                     id="profile_img"
@@ -37,7 +37,7 @@
 					development at Treehouse and am excited to put all my skills
 					to use!
 				</p>
-			</article>
+			</div>
 		</header>
 		<main id="portfolio">
 			<h2 class="uppercase">Portfolio</h2>
